--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Django==1.8.4
-wheel==0.26.0
+dj-database-url==0.3.0
+django-postgrespool==0.3.0
+gunicorn==19.3.0
+psycopg2==2.6
+SQLAlchemy==1.0.4
+whitenoise==1.0.6
