--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==1.8.4
-dj-database-url==0.3.0
-django-postgrespool==0.3.0
-gunicorn==19.3.0
-psycopg2==2.6
-SQLAlchemy==1.0.4
-whitenoise==1.0.6
+mysql-connector-python==2.0.4
+numpy==1.9.0
+Pillow==2.3.0
+PyMySQL==0.6.6
+wheel==0.26.0
+whitenoise==2.0.6
